# AirPiano

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AirPiano.sln  AirPiano.vcxproj  AirPiano.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  findFingers.vcxproj  findFingers.vcxproj.filters  findFingersTest.vcxproj  findFingersTest.vcxproj.filters
AirPiano.dir/Debug/: AirPiano.exe.recipe  AirPiano.ilk
AirPiano.dir/Debug/AirPiano.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Convolution.dir/Debug/: Convolution.exe.recipe  Convolution.ilk
Convolution.dir/Debug/Convolution.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
findFingers.dir/Debug/: findFingers.exe.recipe
findFingers.dir/Debug/findFingers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
findFingersTest.dir/Debug/: findFingersTest.exe.recipe  findFingersTest.ilk
findFingersTest.dir/Debug/findFingersTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  findFingersTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: findFingers.cpp  findFingers.h  findFingersTest.cpp  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+1 more)
